1.18-4.0.23:
- Fixed a potential crash in the teleportation system in some rare cases

1.18-4.0.22:
- Deleting a player from the matter receiver and transmitter player list will now also work based on selection
- Sciguyryan implemented a persistant tag on entities that are spawned by the RFTools spawner (boolean tag rftoolsutility:spawner)
- New feature for sensors. They can now also trigger on amount of items (as entities)

1.18-4.0.21:
- Removed the now obsolete elevator module

1.18-4.0.20:
- Greatly improved the input of the environmental controller. It was very hard to type negative numbers

1.18-4.0.19:
- Fix patchouli manual

1.18-4.0.18:
- Fixed the tank updating when the contents changed

1.18-4.0.17:
- The dialing device is infusable again
- Fixed the counter module to work again (fix partially done by joelra)
- Fixed breaking the screen controller
- New feature for sensors. They can now also trigger on amount of items (as entities)
- The gui for the advanced porter now shows the most useful part of the receiver name by setting the cursor at the beginning

1.18-4.0.16:
- Fixed the blindness module recipe
- Added protection for division by zero in the spawner of the gui
- Small improvement on inputting min height for the environmental controller

1.18-4.0.15:
- Fixed missing recipe for the destination analyzer

1.18-4.0.14:
- Fixed larger screens not refreshing correctly when the chunk got unloaded

1.18-4.0.13:
- Implemented a way for the redstone transmitter and receiver to reset the channel (through the GUI)

1.18-4.0.12:
- Fixed the rendering of the environmental controller buffs
- The screen controller is now infusable again
- The crafter is now infusable again
- Fixed some mod interaction with screens

1.18-4.0.11:
- Port to 1.18.2

1.18-4.0.10:
- Added protection for something that should not be possible in the digit renderer

1.18-4.0.9:
- Fixed a crash bug in the environmental controller when used with mobs and a module that gives a potion effect
