@@ -1,3 +1,6 @@
+Upcoming:
+- Fixed interaction with potential buttons on that screen
+
 1.18-4.0.23:
 - Fixed a potential crash in the teleportation system in some rare cases
 
